Changes in version 0.9
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* No changes recorded.


Changes in version 0.8
======================

Experimental version released on December 7th, 2013.

* Added support for Lutok 0.4.

* Issue 24: Plug the bootstrap tests back into the test suite.  Fixes
  in kyua-testers-0.2 to isolate test cases into their own sessions
  should allow these to run fine.

* Issue 74: Changed the kyuafile(5) parser to automatically discover
  existing tester interfaces.  The various *_test_program() functions
  will now exist (or not) based on tester availability, which simplifies
  the addition of new testers or the selective installation of them.


Changes in version 0.7
======================

Experimental version released on October 18th, 2013.

* Made failures from testers more resilent.  If a tester fails, the
  corresponding test case will be marked as broken instead of causing
  kyua to exit.

* Added the '--results-filter' option to the 'report-html' command and
  set its default value to skip passed results from HTML reports.  This
  is to keep these reports more succint and to avoid generating tons of
  detail files that will be, in general, useless.

* Switched to use Lutok 0.3 to gain compatibility with Lua 5.2.

* Issue 69: Cope with the lack of AM_PROG_AR in configure.ac, which
  first appeared in Automake 1.11.2.  Fixes a problem in Ubuntu 10.04
  LTS, which appears stuck in 1.11.1.


Changes in version 0.6
======================

Experimental version released on February 22nd, 2013.

* Issue 36: Changed 'kyua help' to not fail when the configuration file
  is bogus.  Help should always work.

* Issue 37: Simplified the syntax() calls in configuration and Kyuafile
  files to only specify the requested version instead of also the format
  name.  The format name is implied by the file being loaded, so there
  is no use in the caller having to specify it.  The version number of