@@ -44,6 +44,7 @@
 #include "utils/defs.hpp"
 #include "utils/format/macros.hpp"
 #include "utils/optional.ipp"
+#include "utils/sanity.hpp"
 
 namespace cmdline = utils::cmdline;
 namespace config = utils::config;
@@ -254,6 +255,98 @@ public:
 }  // anonymous namespace
 
 
+/// Constructs an output selector option for the report command.
+cli::output_option::output_option(void) :
+    cmdline::base_option('o', "output",
+                         "The format of the output and the location for "
+                         "the output",
+                         "format:output", "console:/dev/stdout")
+{
+}
+
+
+/// Destructor.
+cli::output_option::~output_option(void)
+{
+}
+
+
+/// Converts a user string to a format identifier.
+///
+/// \param value The user string representing a format name.
+///
+/// \return The format identifier.
+///
+/// \throw std::runtime_error If the input string is invalid.
+cli::output_option::format_type
+cli::output_option::format_from_string(const std::string& value)
+{
+    if (value == "console")
+        return console_format;
+    else
+        throw std::runtime_error(F("Unknown output format '%s'") % value);
+}
+
+
+/// Splits an output selector into its output format and its location.
+///
+/// \param raw_value The argument representing an output selector as provided by
+///     the user.
+///
+/// \return The input value split in its format type and location.
+///
+/// \throw std::runtime_error If the argument has an invalid syntax.
+/// \throw fs::error If the location provided in the argument is invalid.
+cli::output_option::option_type
+cli::output_option::split_value(const std::string& raw_value)
+{
+    const std::string::size_type pos = raw_value.find(':');
+    if (pos == std::string::npos)
+        throw std::runtime_error("Argument must be of the form "
+                                 "format:path");
+    return std::make_pair(format_from_string(raw_value.substr(0, pos)),
+                          fs::path(raw_value.substr(pos + 1)));
+}
+
+
+/// Ensures that an output selector argument passed to the option is valid.
+///
+/// \param raw_value The argument representing an output selector as provided by
+///     the user.
+///
+/// \throw cmdline::option_argument_value_error If the output selector provided
+///     in raw_value is invalid.
+void
+cli::output_option::validate(const std::string& raw_value) const
+{
+    try {
+        (void)split_value(raw_value);
+    } catch (const std::runtime_error& e) {
+        throw cmdline::option_argument_value_error(
+            F("--%s") % long_name(), raw_value, e.what());
+    }
+}
+
+
+/// Splits an output selector argument into an output format and a location.
+///
+/// \param raw_value The argument representing an output selector as provided by
+///     the user.
+///
+/// \return The output format and the location.
+///
+/// \pre validate(raw_value) must be true.
+cli::output_option::option_type
+cli::output_option::convert(const std::string& raw_value)
+{
+    try {
+        return split_value(raw_value);
+    } catch (const std::runtime_error& e) {
+        UNREACHABLE;
+    }
+}
+
+
 const fs::path cli::file_writer::_stdout_path("/dev/stdout");
 const fs::path cli::file_writer::_stderr_path("/dev/stderr");
 
@@ -299,8 +392,7 @@ cli::file_writer::operator()(const std::string& message)
 /// Default constructor for cmd_report.
 cmd_report::cmd_report(void) : cli_command(
     "report", "", 0, 0,
-    "Generates a user-friendly, plain-text report with the result of a "
-    "previous action")
+    "Generates a report with the result of a previous action")
 {
     add_option(store_option);
     add_option(cmdline::bool_option(
@@ -308,9 +400,7 @@ cmd_report::cmd_report(void) : cli_command(
     add_option(cmdline::int_option(
         "action", "The action to report; if not specified, defaults to the "
         "latest action in the database", "id"));
-    add_option(cmdline::path_option(
-        "output", "The file to which to write the report",
-        "path", "/dev/stdout"));
+    add_option(output_option());
     add_option(results_filter_option);
 }
 
@@ -327,14 +417,17 @@ int
 cmd_report::run(cmdline::ui* ui, const cmdline::parsed_cmdline& cmdline,
                 const config::tree& UTILS_UNUSED_PARAM(user_config))
 {
+    const output_option::option_type output =
+        cmdline.get_option< output_option >("output");
+
     optional< int64_t > action_id;
     if (cmdline.has_option("action"))
         action_id = cmdline.get_option< cmdline::int_option >("action");
 
     const result_types types = get_result_types(cmdline);
-    console_hooks hooks(
-        ui, cmdline.get_option< cmdline::path_option >("output"),
-        cmdline.has_option("show-context"), types);
+    INV(output.first == output_option::console_format);
+    console_hooks hooks(ui, output.second, cmdline.has_option("show-context"),
+                        types);
     scan_action::drive(store_path(cmdline), action_id, hooks);
     hooks.print_tests();
 
